# kodegen-config

./: Cargo.toml  test_validation.sh
examples/: test_paths.rs
src/: constants.rs  git.rs  init.rs  lib.rs  path_display.rs  platform.rs  toolset.rs  validation.rs
tests/: integration_tests.rs
