[package]
name = "kodegen_config"
version = "0.10.4"
edition = "2024"
description = "KODEGEN.ᴀɪ: Memory-efficient, Blazing-Fast, MCP tools for code generation agents."
license = "Apache-2.0 OR MIT"
authors = ["KODEGEN.ᴀɪ"]
homepage = "https://kodegen.ai"
repository = "https://github.com/cyrup-ai/kodegen-utils"
readme = "README.md"
categories = ["development-tools", "command-line-utilities", "api-bindings"]
keywords = [
    "mcp",
    "terminal",
    "agent",
    "filesystem",
    "claude"
]

[dependencies]

# Error handling
anyhow = "1.0"

# Gitignore pattern matching (ripgrep's gitignore parser)
ignore = "0.4"

# Temporary file handling for atomic writes
tempfile = "3"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Synchronization primitives (for RwLock in usage_tracker)
parking_lot = "0.12"

# Date/time (for timestamps in usage_tracker)
chrono = { version = "0.4", features = ["serde"] }

# Cross-platform compatibility (for config paths)
dirs = "6"

# Lazy static initialization (for fuzzy logger singleton)
once_cell = "1"

# Unicode normalization (for char_analysis)
unicode-normalization = "0.1"

# LRU cache (for char_analysis)
lru = "0.16"

# Logging
log = "0.4"

[target.'cfg(unix)'.dependencies]
# Advisory file locking (Unix/Linux/macOS)
nix = { version = "0.30", features = ["fs"] }

[target.'cfg(windows)'.dependencies]
# File locking via Windows API
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
] }

[dev-dependencies]
env_logger = "0.11"

[lib]
name = "kodegen_config"
path = "src/lib.rs"
